--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.9",
     "iview": "^3.1.3",
     "js-cookie": "^2.2.0",
     "vue": "^2.5.17",
